CONDEC-979: Improve release notes creation (#574)
* Simplify ReleaseNotesConfiguration

* Make ReleaseNotesEntry implement Comparable for easy sorting

* Remove AdditionConfiguration enum and TargetGroup for simplification

* Use DepthFirstIterator to create Markdown String

* Calculate number of reachable decision knowledge elements

* Simplify rating calculation

* Enable default metric weigths