@@ -1,8 +1,6 @@
 package de.uhd.ifi.se.decision.management.jira.rest;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.ws.rs.DELETE;
@@ -28,9 +26,9 @@ import de.uhd.ifi.se.decision.management.jira.persistence.ConfigPersistenceManag
 import de.uhd.ifi.se.decision.management.jira.persistence.ReleaseNotesPersistenceManager;
 import de.uhd.ifi.se.decision.management.jira.releasenotes.MarkdownCreator;
 import de.uhd.ifi.se.decision.management.jira.releasenotes.ReleaseNotes;
+import de.uhd.ifi.se.decision.management.jira.releasenotes.ReleaseNotesCategory;
 import de.uhd.ifi.se.decision.management.jira.releasenotes.ReleaseNotesConfiguration;
 import de.uhd.ifi.se.decision.management.jira.releasenotes.ReleaseNotesCreator;
-import de.uhd.ifi.se.decision.management.jira.releasenotes.ReleaseNotesEntry;
 
 /**
  * REST resource for the management of {@link ReleaseNotes} with explicit
@@ -147,6 +145,18 @@ public class ReleaseNotesRest {
 		return Response.ok().build();
 	}
 
+	/**
+	 * @param request
+	 *            HttpServletRequest with an authorized Jira
+	 *            {@link ApplicationUser}.
+	 * @param projectKey
+	 *            of a Jira project.
+	 * @param releaseNoteConfiguration
+	 *            {@link ReleaseNotesConfiguration} that is used to propose Jira
+	 *            issues to be included in the release notes.
+	 * @return {@link ReleaseNotes} with suggested Jira issues for each
+	 *         {@link ReleaseNotesCategory}. The content field is not filled yet.
+	 */
 	@Path("/propose-elements")
 	@POST
 	public Response proposeElements(@Context HttpServletRequest request, @QueryParam("projectKey") String projectKey,
@@ -160,39 +170,44 @@ public class ReleaseNotesRest {
 		}
 		ReleaseNotesCreator releaseNotesCreator = new ReleaseNotesCreator(jiraIssuesMatchingQuery,
 				releaseNoteConfiguration, user);
-		Map<String, List<ReleaseNotesEntry>> mappedProposals = releaseNotesCreator.getMappedProposals();
+		ReleaseNotes proposedReleaseNotes = releaseNotesCreator.proposeReleaseNotes();
 
-		if (mappedProposals == null) {
+		if (proposedReleaseNotes == null) {
 			return Response.status(Status.BAD_REQUEST).entity(
-					ImmutableMap.of("error", "No issues with the mapped types are resolved in this date range!"))
+					ImmutableMap.of("error", "No Jira issues with the mapped types are resolved in this date range!"))
 					.build();
 		}
-		Map<String, Object> result = new HashMap<>();
-		result.put("proposals", mappedProposals);
-		result.put("additionalConfiguration", releaseNoteConfiguration.getAdditionalConfiguration());
-		result.put("title", releaseNoteConfiguration.getTitle());
-		result.put("startDate", releaseNoteConfiguration.getStartDate());
-		result.put("endDate", releaseNoteConfiguration.getEndDate());
-		return Response.ok(result).build();
+		return Response.ok(proposedReleaseNotes).build();
 	}
 
-	@Path("/postProposedKeys")
+	/**
+	 * @param request
+	 *            HttpServletRequest with an authorized Jira
+	 *            {@link ApplicationUser}.
+	 * @param releaseNotes
+	 *            {@link ReleaseNotes} with selected Jira issues for each
+	 *            {@link ReleaseNotesCategory}.
+	 * @return markdown string for the content field of the {@link ReleaseNotes}.
+	 */
+	@Path("/create-content")
 	@POST
-	public Response postProposedKeys(@Context HttpServletRequest request, @QueryParam("projectKey") String projectKey,
-			Map<String, Map<String, List<String>>> postObject) {
-		ApplicationUser user = AuthenticationManager.getUser(request);
-		Map<String, List<String>> keysForContent = postObject.get("selectedKeys");
-		String title = postObject.get("title").get("id").get(0);
-		List<String> additionalConfiguration = postObject.get("additionalConfiguration").get("id");
-		MarkdownCreator markdownCreator = new MarkdownCreator(user, projectKey, keysForContent, title,
-				additionalConfiguration);
-
-		// generate text string
+	public Response createReleaseNotesContent(@Context HttpServletRequest request, ReleaseNotes releaseNotes) {
+		MarkdownCreator markdownCreator = new MarkdownCreator(releaseNotes);
 		String markDownString = markdownCreator.getMarkdownString();
-		// return text string
-		return Response.ok(Map.of("markdown", markDownString)).build();
+		return Response.ok(ImmutableMap.of("markdown", markDownString)).build();
 	}
 
+	/**
+	 * @param request
+	 *            HttpServletRequest with an authorized Jira
+	 *            {@link ApplicationUser}.
+	 * @param projectKey
+	 *            of a Jira project.
+	 * @param releaseNotesConfiguration
+	 *            {@link ReleaseNotesConfiguration} to be saved as the default when
+	 *            creating new {@link ReleaseNotes}.
+	 * @return ok if saving was successful.
+	 */
 	@Path("/save-configuration")
 	@POST
 	public Response saveReleaseNotesConfiguration(@Context HttpServletRequest request,
@@ -205,6 +220,12 @@ public class ReleaseNotesRest {
 		return Response.ok().build();
 	}
 
+	/**
+	 * @param projectKey
+	 *            of a Jira project.
+	 * @return {@link ReleaseNotesConfiguration} to be used as the default when
+	 *         creating new {@link ReleaseNotes}.
+	 */
 	@Path("/configuration")
 	@GET
 	public Response getReleaseNotesConfiguration(@QueryParam("projectKey") String projectKey) {
